[package]
name = "lunarlander"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8", features = ["jpeg"] }
simula_core = { git = "https://github.com/Simbotic/simula.git", rev = "63c4d06263b608257fd2645bc0fb9028e6940c79" }
simula_camera = { git = "https://github.com/Simbotic/simula.git", rev = "63c4d06263b608257fd2645bc0fb9028e6940c79" }
simula_viz = { git = "https://github.com/Simbotic/simula.git", rev = "63c4d06263b608257fd2645bc0fb9028e6940c79" }
bevy-inspector-egui = "0.12.0"
bevy_rapier3d = "0.16.0"

tokio = { default-features = false, features = ["full"], version = "1" }
futures = { version = "0.3" }
crossbeam = "0.8"
